🚧: Add view model for create diabetes risk

--- a/AUF.EMR.MVC/Views/DiabetesRisk/Create.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AUF.EMR.Domain.Models.DiabetesRisk
+﻿@model CreateDiabetesRiskVM
 
 @{
     ViewData["Title"] = "Create";
@@ -22,15 +22,20 @@
                     </div>
                     <!-- Age -->
                     <div class="mb-4">
-                        <label asp-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">Age</label>
-                        <select id="relationshipToHead" asp-for="HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
+                        <label asp-for="DiabetesRisk.HouseholdMemberId" class="block mb-2 text-sm font-medium text-gray-700">Assessment for</label>
+                        <select asp-for="DiabetesRisk.HouseholdMemberId" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" asp-items="@(new SelectList(Model.MemberList, nameof(HouseholdMember.Id), nameof(HouseholdMember.FormattedFullName)))"></select>
+                    </div>
+                    <!-- Age -->
+                    <div class="mb-4">
+                        <label asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">Age</label>
+                        <select id="relationshipToHead" asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
                             <option value="" selected>Select your age</option>
                             <option value="1">Under 45 years old - 0 pts</option>
                             <option value="2">45-54 years old - 2 pts</option>
                             <option value="3">55-64 years old - 3 pts</option>
                             <option value="4">Over 64 years old - 4 pts</option>
                         </select>
-                        <span asp-validation-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <!-- BMI -->
                     <div class="mb-2 mt-8 w-full md:w-4/5 flex justify-between">
@@ -39,29 +44,29 @@
                     </div>
                     <!-- IF --> 
                     <div class="mb-4">
-                        <label asp-for="HeightInCm" class="block mb-2 text-sm font-medium text-gray-700">Height</label>
-                        <input asp-for="HeightInCm" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
-                        <span asp-validation-for="HeightInCm" class="block mb-2 text-sm text-red-700"></span>
+                        <label asp-for="DiabetesRisk.HeightInCm" class="block mb-2 text-sm font-medium text-gray-700">Height</label>
+                        <input asp-for="DiabetesRisk.HeightInCm" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="DiabetesRisk.HeightInCm" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="WeightInKg" class="block mb-2 text-sm font-medium text-gray-700">Weight</label>
-                        <input asp-for="WeightInKg" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
-                        <span asp-validation-for="WeightInKg" class="block mb-2 text-sm text-red-700"></span>
+                        <label asp-for="DiabetesRisk.WeightInKg" class="block mb-2 text-sm font-medium text-gray-700">Weight</label>
+                        <input asp-for="DiabetesRisk.WeightInKg" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="DiabetesRisk.WeightInKg" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="Bmi" class="block mb-2 text-sm font-medium text-gray-700">BMI</label>
-                        <input asp-for="Bmi" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
-                        <span asp-validation-for="Bmi" class="block mb-2 text-sm text-red-700"></span>
+                        <label asp-for="DiabetesRisk.Bmi" class="block mb-2 text-sm font-medium text-gray-700">BMI</label>
+                        <input asp-for="DiabetesRisk.Bmi" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="DiabetesRisk.Bmi" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">BMI Classification</label>
-                        <select id="relationshipToHead" asp-for="HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
+                        <label asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">BMI Classification</label>
+                        <select id="relationshipToHead" asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
                             <option value="" selected>Select your BMI</option>
                             <option value="1">Lower than 25 kg/m² - 0 pts</option>
                             <option value="2">25-30 kg/m² - 1 pt</option>
                             <option value="3">Higher than 30 kg/m² - 3 pts</option>
                         </select>
-                        <span asp-validation-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
                     </div>
 
                     <!-- Waist Circumference -->
@@ -69,14 +74,14 @@
                         <h6 class="text-md font-bold text-gray-800">Waist Circumference</h6>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">Waist Circumference measured below the ribs</label>
-                        <select id="relationshipToHead" asp-for="HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
+                        <label asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">Waist Circumference measured below the ribs</label>
+                        <select id="relationshipToHead" asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
                             <option value="" selected>Select your waist circumference</option>
                             <option value="1">Less than 94 cm - 0 pts</option>
                             <option value="2">94-102 cm - 3 pts</option>
                             <option value="3">More than 102 cm - 4 pts</option>
                         </select>
-                        <span asp-validation-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                 </div>
                 <!-- Right Column -->
@@ -89,15 +94,15 @@
                         <label class="block mb-2 text-sm font-medium text-gray-700">Do you usually have daily at least 30 minutes of physical activity at work and/or during leisure time?</label>
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="IsPhysicallyActive" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="IsPhysicallyActive" class="ms-2 text-sm font-medium text-gray-900">Yes - 0 pts</label>
+                                <input asp-for="DiabetesRisk.IsPhysicallyActive" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.IsPhysicallyActive" class="ms-2 text-sm font-medium text-gray-900">Yes - 0 pts</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="IsPhysicallyActive" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="IsPhysicallyActive" class="ms-2 text-sm font-medium text-gray-900">No - 2 pts</label>
+                                <input asp-for="DiabetesRisk.IsPhysicallyActive" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.IsPhysicallyActive" class="ms-2 text-sm font-medium text-gray-900">No - 2 pts</label>
                             </div>
                         </div>
-                        <span asp-validation-for="IsPhysicallyActive" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.IsPhysicallyActive" class="block mb-2 text-sm text-red-700"></span>
                     </div>
 
                     <!-- Healthy Food Intake -->
@@ -108,15 +113,15 @@
                         <label class="block mb-2 text-sm font-medium text-gray-700">How often do you eat vegetables, fruits, or berries?</label>
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="EatsVegetablesEveryDay" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="EatsVegetablesEveryDay" class="ms-2 text-sm font-medium text-gray-900">Every day - 0 pts</label>
+                                <input asp-for="DiabetesRisk.EatsVegetablesEveryDay" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.EatsVegetablesEveryDay" class="ms-2 text-sm font-medium text-gray-900">Every day - 0 pts</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="EatsVegetablesEveryDay" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="EatsVegetablesEveryDay" class="ms-2 text-sm font-medium text-gray-900">Not every day - 1 pt</label>
+                                <input asp-for="DiabetesRisk.EatsVegetablesEveryDay" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.EatsVegetablesEveryDay" class="ms-2 text-sm font-medium text-gray-900">Not every day - 1 pt</label>
                             </div>
                         </div>
-                        <span asp-validation-for="EatsVegetablesEveryDay" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.EatsVegetablesEveryDay" class="block mb-2 text-sm text-red-700"></span>
                     </div>
 
                     <!-- High Blood Pressure -->
@@ -127,15 +132,15 @@
                         <label class="block mb-2 text-sm font-medium text-gray-700">Have you ever taken medication for high blood pressure on a regular basis?</label>
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="TakingHighBloodPressureMedication" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="TakingHighBloodPressureMedication" class="ms-2 text-sm font-medium text-gray-900">No - 0 pts</label>
+                                <input asp-for="DiabetesRisk.TakingHighBloodPressureMedication" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.TakingHighBloodPressureMedication" class="ms-2 text-sm font-medium text-gray-900">No - 0 pts</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="TakingHighBloodPressureMedication" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="TakingHighBloodPressureMedication" class="ms-2 text-sm font-medium text-gray-900">Yes - 2 pts</label>
+                                <input asp-for="DiabetesRisk.TakingHighBloodPressureMedication" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.TakingHighBloodPressureMedication" class="ms-2 text-sm font-medium text-gray-900">Yes - 2 pts</label>
                             </div>
                         </div>
-                        <span asp-validation-for="TakingHighBloodPressureMedication" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.TakingHighBloodPressureMedication" class="block mb-2 text-sm text-red-700"></span>
                     </div>
 
                     <!-- High Blood Glucose -->
@@ -146,15 +151,15 @@
                         <label class="block mb-2 text-sm font-medium text-gray-700">Have you ever been found to have high blood glucode (eg. in a health examination, during an illness, during pregnancy?</label>
                         <div class="flex">
                             <div class="flex items-center me-4">
-                                <input asp-for="HasHighBloodGlucose" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="HasHighBloodGlucose" class="ms-2 text-sm font-medium text-gray-900">No - 0 pts</label>
+                                <input asp-for="DiabetesRisk.HasHighBloodGlucose" value="true" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.HasHighBloodGlucose" class="ms-2 text-sm font-medium text-gray-900">No - 0 pts</label>
                             </div>
                             <div class="flex items-center me-4">
-                                <input asp-for="HasHighBloodGlucose" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
-                                <label asp-for="HasHighBloodGlucose" class="ms-2 text-sm font-medium text-gray-900">Yes - 5 pts</label>
+                                <input asp-for="DiabetesRisk.HasHighBloodGlucose" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
+                                <label asp-for="DiabetesRisk.HasHighBloodGlucose" class="ms-2 text-sm font-medium text-gray-900">Yes - 5 pts</label>
                             </div>
                         </div>
-                        <span asp-validation-for="HasHighBloodGlucose" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.HasHighBloodGlucose" class="block mb-2 text-sm text-red-700"></span>
                     </div>
 
                     <!-- Family Diabetes History -->
@@ -162,14 +167,14 @@
                         <h6 class="text-md font-bold text-gray-800">Family Diabetes History</h6>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">Have any of the members of your immediate family or other relative been diagnosed with diabetes (type 1 or type 2)?</label>
-                        <select id="relationshipToHead" asp-for="HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
+                        <label asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm font-medium text-gray-700">Have any of the members of your immediate family or other relative been diagnosed with diabetes (type 1 or type 2)?</label>
+                        <select id="relationshipToHead" asp-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 p-2.5 w-full md:w-4/5">
                             <option value="" selected>Select an option</option>
                             <option value="1">No - 0 pts</option>
                             <option value="2">Yes; grandparent, aunt, unlce or first cousin - 3 pts</option>
                             <option value="2">Yes; parent, brother, sister or own child - 5 pts</option>
                         </select>
-                        <span asp-validation-for="HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
+                        <span asp-validation-for="DiabetesRisk.HouseholdMember.RelationshipToHouseholdHead" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                 </div>
             </div>
